@@ -1,6 +1,7 @@
 v2.10.1.
   * improve Net::HTTP instrumentation so its more efficient and distinguishes calls
     between web and non-web transactions.
+  * database instrumentation notices all database commands in addition to the core commands
   * add support for textmate to dev mode
   * preliminary sinatra support, displays actions named by the URI pattern matched
   * added add_transaction_tracer method to support instrumenting methods as
